--- a/sample_app/index.html
+++ b/sample_app/index.html
@@ -12,7 +12,7 @@
 
     <script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <script type="module" src="/src/main-app/main-app.js" crossorigin></script>
+    <script type="module" src="/src/main-app/feedback.js" crossorigin></script>
 
     <script>
       /*
@@ -27,6 +27,7 @@
     </script>
   </head>
   <body>
-    <main-app></main-app>
+  <h1>This is the beginning</h1>
+    <feedback-form></feedback-form>
   </body>
 </html>
