adding a few html controls

--- a/sample_app/index.html
+++ b/sample_app/index.html
@@ -36,7 +36,12 @@
     </script>
   </head>
   <body>
-  <h1>This is the beginning</h1>
+    <h1>This is the beginning</h1>
+    <h3>Some controls</h3>
+    <input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
+    <input type="checkbox" name="vehicle2" value="Car"> I have a car<br>
+    <input type="checkbox" name="vehicle3" value="Boat"> I have a boat<br><br>
+    <textarea rows="10" cols="50"></textarea>
     <feedback-form></feedback-form>
   </body>
 </html>
