updating title and description content

--- a/sample_app/index.html
+++ b/sample_app/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>sample_app</title>
-    <meta name="description" content="sample_app description">
+    <title>Feedback with FullStory</title>
+    <meta name="description" content="This is a sample app that demonstrates how FullStory session replay is used with sentiment analyisis on user feedback to automatically create GitHub issues.">
 
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
