fixing typo in the header

--- a/sample_app/index.html
+++ b/sample_app/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <header>
-      <h1>User feedback and sentiment analyis with</h1>
+      <h1>User feedback and sentiment analysis with</h1>
       <div id="fullstory-logo"></div>
     </header>
     <div id="container">
