--- a/sample_app/index.html
+++ b/sample_app/index.html
@@ -42,14 +42,14 @@
     </header>
     <div id="container">
       <h3>What is this?</h3>
-      <p>This is a demonstration of how <a href="http://www.fullstory.com">FullStory's</a> session replay technology can be fused with sentiment anaylsis on customer feedback to automatically generate issues in GitHub.</p>
+      <p>This is a demonstration of how <a href="http://www.fullstory.com">FullStory's</a> session replay URLs can be fused with sentiment anaylsis on customer feedback to automatically generate issues in GitHub.</p>
       <h3>How can I test it out?</h3>
       <ol>
         <li>Click the Feedback tab parked over there on the right-hand side of this screen &rArr;</li>
         <li>Type something unfriendly (feedback with negative sentiment will create a GitHub issue)</li>
         <li>Send your feedback</li>
         <li>Checkout the GitHub issues list for this project: <a href="https://github.com/patrickbrandt/fullstory-demo/issues">https://github.com/patrickbrandt/fullstory-demo/issues</a></li>
-        <li>You should see a new open issue with a "negative-feedback" label that contains your feedback and a FullStory session replay URL</li>
+        <li>You'll see a new open issue with a "negative-feedback" label that contains your feedback and a FullStory session replay URL</li>
       </ol>
       <h3>What about feedback that isn't negative?</h3>
       <p>I've got you covered. You can find all feedback and FullStory session replay URLs here: <a href="https://wpb.is/FeedbackPortal">https://wpb.is/FeedbackPortal</a></p>
@@ -63,7 +63,7 @@
         <li><a href="https://help.fullstory.com/develop-js">The FullStory JavaScript API</a> for Session Replay URLs</li>
       </ul>
       <h3>How can I watch the replays?</h3>
-      <p>Right now all session replay URLs are tied to my FullStory account. However, code for everything outlined on this page is on GitHub: <a href="https://github.com/patrickbrandt/fullstory-demo">https://github.com/patrickbrandt/fullstory-demo</a>. Feel free to fork it and update all account ids (for FullStory and GitHub) to make it your own.</p>
+      <p>Right now all session replay URLs are tied to my FullStory account. However, code for everything outlined on this page is on GitHub at <a href="https://github.com/patrickbrandt/fullstory-demo">https://github.com/patrickbrandt/fullstory-demo</a>. Feel free to fork it and update all account ids (for FullStory and GitHub) to make it your own.</p>
       <h2>Session Replay Playground</h2>
       <p>A random assortment of HTML elements that you can interact with to build <a href="https://help.fullstory.com/using/user-funnel-searchie">event funnels</a> or just watch replays</p>
 
