adding preferred header font to feedback portal

--- a/sample_app/index.html
+++ b/sample_app/index.html
@@ -63,7 +63,7 @@
         <li><a href="https://help.fullstory.com/develop-js">The FullStory JavaScript API</a> for Session Replay URLs</li>
       </ul>
       <h3>How can I watch the replays?</h3>
-      <p>Right now all session replay URLs are tied to my FullStory account. However, code for everything outlined on this page is on GitHub at <a href="https://github.com/patrickbrandt/fullstory-demo">https://github.com/patrickbrandt/fullstory-demo</a>. Feel free to fork it and update all account ids (for FullStory and GitHub) to make it your own.</p>
+      <p>All session replay URLs generated for this site are tied to my FullStory account, so only I can see them. However, code for everything outlined on this page is on GitHub at <a href="https://github.com/patrickbrandt/fullstory-demo">https://github.com/patrickbrandt/fullstory-demo</a>. Feel free to fork it and update all account ids (for FullStory and GitHub) to make it your own.</p>
       <h2>Session Replay Playground</h2>
       <p>A random assortment of HTML elements that you can interact with to build <a href="https://help.fullstory.com/using/user-funnel-searchie">event funnels</a> or just watch replays</p>
 
