renaming homesite directory

--- a/homesite/index.html
+++ b/homesite/index.html
@@ -48,7 +48,7 @@
         <li>Click the Feedback tab parked over there on the right-hand side of this screen &rArr;</li>
         <li>Type something unfriendly (feedback with negative sentiment will create a GitHub issue)</li>
         <li>Send your feedback</li>
-        <li>Checkout the GitHub issues list for this project: <a href="https://github.com/patrickbrandt/fullstory-demo/issues">https://github.com/patrickbrandt/fullstory-demo/issues</a></li>
+        <li>Checkout the GitHub issue list for this project: <a href="https://github.com/patrickbrandt/fullstory-demo/issues">https://github.com/patrickbrandt/fullstory-demo/issues</a></li>
         <li>You'll see a new open issue with a "negative-feedback" label that contains your feedback and a FullStory session replay URL</li>
       </ol>
       <h3>What about feedback that isn't negative?</h3>
