adding readme and some more homesite copy

--- a/homesite/index.html
+++ b/homesite/index.html
@@ -42,7 +42,7 @@
     </header>
     <div id="container">
       <h3>What is this?</h3>
-      <p>This is a demonstration of how <a href="http://www.fullstory.com">FullStory's</a> session replay URLs can be fused with sentiment anaylsis on customer feedback to automatically generate issues in GitHub.</p>
+      <p>This is a demonstration of how <a href="http://www.fullstory.com">FullStory's</a> session replay URLs can be fused with sentiment anaylsis on customer feedback to automatically generate issues in GitHub. FullStory session replay gives website owners and customer support staff a pixel-perfect replay of real user experiences on their websites.</p>
       <h3>How can I test it out?</h3>
       <ol>
         <li>Click the Feedback tab parked over there on the right-hand side of this screen &rArr;</li>
