--- a/homesite/index.html
+++ b/homesite/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
     <script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script type="module" src="/src/main-app/feedback.js" crossorigin></script>
+    <script type="module" src="/src/components/feedback.js" crossorigin></script>
 
     <script>
       window['_fs_debug'] = false;
