updating api readme

--- a/homesite/index.html
+++ b/homesite/index.html
@@ -58,7 +58,7 @@
         <li><a href="https://www.polymer-project.org/">Polymer 3.0</a> for the feedback widget</li>
         <li><a href="https://reactjs.org/">React</a> for the feedback portal</li>
         <li><a href="http://serverless.com">The Serverless Framework</a> with <a href="https://aws.amazon.com/api-gateway/">AWS API Gateway</a>, <a href="https://aws.amazon.com/lambda/">AWS Lambda</a>, and <a href="https://aws.amazon.com/dynamodb/">DynamoDB</a> for the integration API</li>
-        <li><a href="https://aws.amazon.com/comprehend/">AWS Comprehend</a> for sentiment analysis</li>
+        <li><a href="https://aws.amazon.com/comprehend/">Amazon Comprehend</a> for sentiment analysis</li>
         <li><a href="https://developer.github.com/apps/about-apps/">GitHub Apps</a> and the <a href="https://developer.github.com/v3/apps/">GitHub REST API</a> for creating issues on GitHub</li>
         <li><a href="https://help.fullstory.com/develop-js">The FullStory JavaScript API</a> for Session Replay URLs</li>
       </ul>
